<resources>
    <string name="app_name">Avalanche</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="sound_on">Sound on</string>
    <string name="chill_mode">Chill mode</string>
    <string name="highscores">Highscores</string>
    <string name="play">Play</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">Play again</string>
    <string name="title_activity_insert_username">InsertUsername</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="insert_username">Insert Username:</string>
    <string name="username">Username</string>
    <string name="ok">Ok</string>
</resources>