<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="178dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="115dp"
        android:gravity="center"
        android:text="@string/menu"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/play"
        android:layout_width="220dp"
        android:layout_height="84dp"
        android:layout_below="@+id/menu"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="90dp"
        android:text="@string/play"
        android:textSize="20sp" />

    <Button
        android:id="@+id/highscores"
        android:layout_width="220dp"
        android:layout_height="84dp"
        android:layout_below="@+id/play"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="90dp"
        android:text="@string/highscores"
        android:textSize="20sp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="198dp"
        android:layout_height="80dp"
        android:layout_below="@+id/highscores"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="90dp"
        android:text="@string/settings"
        android:textSize="20sp" />

</RelativeLayout>