<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/game_over_text"
        android:layout_width="291dp"
        android:layout_height="162dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:text="@string/game_over"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/play_again"
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_below="@+id/back"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="118dp"
        android:gravity="center"
        android:text="@string/play_again"
        android:textSize="20sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="177dp"
        android:layout_height="71dp"
        android:layout_below="@+id/game_over_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="118dp"
        android:gravity="center"
        android:text="@string/back"
        android:textSize="20sp" />
</RelativeLayout>